# stock-mkt

./: .flake8  Dockerfile  README.md  compose.yml  pyproject.toml  sample.env
scripts/: init.api.sh
stock_mkt/: app.py  cache.py  commands.py  config.py  crypto_utils.py  db.py  logs.py  model.py  queries.py  repositories.py
tests/: test_api.py  test_commands.py  test_queries.py  utils.py
tests/responses/: alpha_response.json  wrong_symbol_response.json
